# puppyCal

./: .env.example  .gitignore  .lighthouserc.json  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .vercelignore  README.md  eslint.config.js  generate_ics.py  package-lock.json  package.json  pyproject.toml  stabyhoun_puppy_schedule.ics  tailwind.config.js  tsconfig.json  vercel.json  vitest.config.ts  webpack.config.js
.github/workflows/: ci.yml
.husky/: pre-commit
api/: scan.ts
coverage/: lcov.info
coverage/lcov-report/: index.html
docs/: AI_AGENT_GUIDE.md  CONFIGURATION.md  LANGUAGE_TOGGLE.md  UPDATES.md
examples/: writings.config.ts
i18n/: en.json  nl.json
memory/: SCHEMA.md
memory/.recall/: metadata.json
public/: robots.txt  sw.js
scripts/: generate-icons.mjs  screenshots.mjs  sync-version.mjs
src/: Footer.astro  analytics.test.ts  analytics.ts  app-helpers.test.ts  app-helpers.ts  app.ts  breeds.ts  calendar-preview.ts  config.test.ts  config.ts  css.d.ts  custom-select.ts  dog-photo.ts  env.d.ts  footer.config.ts  footer.ts  i18n-bundle.test.ts  i18n.test.ts  i18n.ts  ics.test.ts  ics.ts  index.css  index.html  index.ts  metadata.test.ts  metadata.ts  scanner.ts  share-birthday.test.ts  share-birthday.ts  share-captions.test.ts  share-captions.ts  share-image.test.ts  share-image.ts  share-milestones.test.ts  share-milestones.ts  share-utils.test.ts  share-utils.ts  sharing.test.ts  sharing.ts  static-assets.test.ts  (+2 more)
web/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
(+195 files in other folders)
