[project]
name = "puppy-ics"
version = "0.1.0"
description = "Generate Stabyhoun puppy walking schedule as ICS calendar"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
generate-ics = "generate_ics:main"

[tool.hatch.build.targets.wheel]
only-include = ["generate_ics.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
